Scaner/KonturParser.py
# Generated from Kontur.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KonturParser ( Parser ):

    grammarFileName = "Kontur.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'string'", 
                     "'int'", "'float'", "'bool'", "'matrix'", "'true'", 
                     "'false'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'\\u00E2\\u20AC\\uFFFD'", "'!'", "'++'", "'--'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'||'", "'&&'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "','", 
                     "<INVALID>", "'if'", "'else'", "'elif'", "'for'", "'while'", 
                     "'continue'", "'break'", "'func'", "'display'", "'input'", 
                     "'return'", "'plot'" ]

    symbolicNames = [ "<INVALID>", "NUMBER", "STRING", "TYPE_STRING", "TYPE_INT", 
                      "TYPE_FLOAT", "TYPE_BOOL", "TYPE_MATRIX", "TRUE_VALUE", 
                      "FALSE_VALUE", "ASSIGN", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "MODULO", "TRANSPOSITION", "INVERT_MATRIX", 
                      "INCREMENT", "DECREMENT", "EQUAL", "NOT_EQUAL", "LESS_THAN", 
                      "LESS_EQUAL", "GREATER_THAN", "GREATER_EQUAL", "OR", 
                      "AND", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", "SEMICOLON", 
                      "COMMA", "IDENTIFIER", "IF_INSTR", "ELSE_INSTR", "ELIF_INSTR", 
                      "FOR_INSTR", "WHILE_INSTR", "CONTINUE_INSTR", "BREAK_INSTR", 
                      "FUNC_INSTR", "DISPLAY_INSTR", "INPUT_INSTR", "RETURN_INSTR", 
                      "PLOT_INSTR", "COMMENT", "WHITE_SPACE", "STATEMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_expression = 3
    RULE_matrixExpression = 4
    RULE_matrixAtom = 5
    RULE_matrixConstruction = 6
    RULE_row = 7
    RULE_value = 8
    RULE_stringExpression = 9
    RULE_funcExpression = 10
    RULE_boolExpression = 11
    RULE_funcDecl = 12
    RULE_parameters = 13
    RULE_returnDecl = 14
    RULE_numExpression = 15
    RULE_term = 16
    RULE_factor = 17
    RULE_typeName = 18
    RULE_ifStatement = 19
    RULE_loopStatement = 20
    RULE_forLoop = 21
    RULE_whileLoop = 22
    RULE_displayDecl = 23
    RULE_plotDecl = 24

    ruleNames =  [ "program", "statement", "assignment", "expression", "matrixExpression", 
                   "matrixAtom", "matrixConstruction", "row", "value", "stringExpression", 
                   "funcExpression", "boolExpression", "funcDecl", "parameters", 
                   "returnDecl", "numExpression", "term", "factor", "typeName", 
                   "ifStatement", "loopStatement", "forLoop", "whileLoop", 
                   "displayDecl", "plotDecl" ]

    EOF = Token.EOF
    NUMBER=1
    STRING=2
    TYPE_STRING=3
    TYPE_INT=4
    TYPE_FLOAT=5
    TYPE_BOOL=6
    TYPE_MATRIX=7
    TRUE_VALUE=8
    FALSE_VALUE=9
    ASSIGN=10
    PLUS=11
    MINUS=12
    MULTIPLY=13
    DIVIDE=14
    MODULO=15
    TRANSPOSITION=16
    INVERT_MATRIX=17
    INCREMENT=18
    DECREMENT=19
    EQUAL=20
    NOT_EQUAL=21
    LESS_THAN=22
    LESS_EQUAL=23
    GREATER_THAN=24
    GREATER_EQUAL=25
    OR=26
    AND=27
    LEFT_PAREN=28
    RIGHT_PAREN=29
    LEFT_BRACKET=30
    RIGHT_BRACKET=31
    LEFT_BRACE=32
    RIGHT_BRACE=33
    SEMICOLON=34
    COMMA=35
    IDENTIFIER=36
    IF_INSTR=37
    ELSE_INSTR=38
    ELIF_INSTR=39
    FOR_INSTR=40
    WHILE_INSTR=41
    CONTINUE_INSTR=42
    BREAK_INSTR=43
    FUNC_INSTR=44
    DISPLAY_INSTR=45
    INPUT_INSTR=46
    RETURN_INSTR=47
    PLOT_INSTR=48
    COMMENT=49
    WHITE_SPACE=50
    STATEMENT=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KonturParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.StatementContext)
            else:
                return self.getTypedRuleContext(KonturParser.StatementContext,i)


        def getRuleIndex(self):
            return KonturParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = KonturParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 460907167745022) != 0):
                self.state = 50
                self.statement()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(KonturParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACE(self):
            return self.getToken(KonturParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(KonturParser.RIGHT_BRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.StatementContext)
            else:
                return self.getTypedRuleContext(KonturParser.StatementContext,i)


        def assignment(self):
            return self.getTypedRuleContext(KonturParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(KonturParser.ExpressionContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(KonturParser.FuncDeclContext,0)


        def plotDecl(self):
            return self.getTypedRuleContext(KonturParser.PlotDeclContext,0)


        def returnDecl(self):
            return self.getTypedRuleContext(KonturParser.ReturnDeclContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(KonturParser.LoopStatementContext,0)


        def displayDecl(self):
            return self.getTypedRuleContext(KonturParser.DisplayDeclContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(KonturParser.IfStatementContext,0)


        def getRuleIndex(self):
            return KonturParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = KonturParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(KonturParser.LEFT_BRACE)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 460907167745022) != 0):
                    self.state = 59
                    self.statement()
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 65
                self.match(KonturParser.RIGHT_BRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.expression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.funcDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.plotDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 70
                self.returnDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 71
                self.loopStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 72
                self.displayDecl()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 73
                self.ifStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(KonturParser.TypeNameContext,0)


        def IDENTIFIER(self):
            return self.getToken(KonturParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(KonturParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(KonturParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(KonturParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return KonturParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = KonturParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.typeName()
            self.state = 77
            self.match(KonturParser.IDENTIFIER)
            self.state = 78
            self.match(KonturParser.ASSIGN)
            self.state = 79
            self.expression()
            self.state = 80
            self.match(KonturParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numExpression(self):
            return self.getTypedRuleContext(KonturParser.NumExpressionContext,0)


        def matrixExpression(self):
            return self.getTypedRuleContext(KonturParser.MatrixExpressionContext,0)


        def stringExpression(self):
            return self.getTypedRuleContext(KonturParser.StringExpressionContext,0)


        def boolExpression(self):
            return self.getTypedRuleContext(KonturParser.BoolExpressionContext,0)


        def funcExpression(self):
            return self.getTypedRuleContext(KonturParser.FuncExpressionContext,0)


        def getRuleIndex(self):
            return KonturParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = KonturParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.numExpression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.matrixExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.stringExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.boolExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.funcExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matrixAtom(self):
            return self.getTypedRuleContext(KonturParser.MatrixAtomContext,0)


        def INVERT_MATRIX(self):
            return self.getToken(KonturParser.INVERT_MATRIX, 0)

        def TRANSPOSITION(self):
            return self.getToken(KonturParser.TRANSPOSITION, 0)

        def getRuleIndex(self):
            return KonturParser.RULE_matrixExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixExpression" ):
                listener.enterMatrixExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixExpression" ):
                listener.exitMatrixExpression(self)




    def matrixExpression(self):

        localctx = KonturParser.MatrixExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_matrixExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 89
                self.match(KonturParser.INVERT_MATRIX)


            self.state = 92
            self.matrixAtom()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 93
                self.match(KonturParser.TRANSPOSITION)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixAtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(KonturParser.IDENTIFIER, 0)

        def matrixConstruction(self):
            return self.getTypedRuleContext(KonturParser.MatrixConstructionContext,0)


        def getRuleIndex(self):
            return KonturParser.RULE_matrixAtom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixAtom" ):
                listener.enterMatrixAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixAtom" ):
                listener.exitMatrixAtom(self)




    def matrixAtom(self):

        localctx = KonturParser.MatrixAtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_matrixAtom)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(KonturParser.IDENTIFIER)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.matrixConstruction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixConstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACKET(self):
            return self.getToken(KonturParser.LEFT_BRACKET, 0)

        def row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.RowContext)
            else:
                return self.getTypedRuleContext(KonturParser.RowContext,i)


        def RIGHT_BRACKET(self):
            return self.getToken(KonturParser.RIGHT_BRACKET, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(KonturParser.SEMICOLON)
            else:
                return self.getToken(KonturParser.SEMICOLON, i)

        def getRuleIndex(self):
            return KonturParser.RULE_matrixConstruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixConstruction" ):
                listener.enterMatrixConstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixConstruction" ):
                listener.exitMatrixConstruction(self)




    def matrixConstruction(self):

        localctx = KonturParser.MatrixConstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_matrixConstruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(KonturParser.LEFT_BRACKET)
            self.state = 101
            self.row()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 102
                self.match(KonturParser.SEMICOLON)
                self.state = 103
                self.row()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self.match(KonturParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.ValueContext)
            else:
                return self.getTypedRuleContext(KonturParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(KonturParser.COMMA)
            else:
                return self.getToken(KonturParser.COMMA, i)

        def getRuleIndex(self):
            return KonturParser.RULE_row

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRow" ):
                listener.enterRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRow" ):
                listener.exitRow(self)




    def row(self):

        localctx = KonturParser.RowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.value()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 112
                self.match(KonturParser.COMMA)
                self.state = 113
                self.value()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(KonturParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(KonturParser.IDENTIFIER, 0)

        def matrixExpression(self):
            return self.getTypedRuleContext(KonturParser.MatrixExpressionContext,0)


        def getRuleIndex(self):
            return KonturParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = KonturParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(KonturParser.NUMBER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(KonturParser.IDENTIFIER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.matrixExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(KonturParser.STRING)
            else:
                return self.getToken(KonturParser.STRING, i)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(KonturParser.IDENTIFIER)
            else:
                return self.getToken(KonturParser.IDENTIFIER, i)

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(KonturParser.PLUS)
            else:
                return self.getToken(KonturParser.PLUS, i)

        def getRuleIndex(self):
            return KonturParser.RULE_stringExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpression" ):
                listener.enterStringExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpression" ):
                listener.exitStringExpression(self)




    def stringExpression(self):

        localctx = KonturParser.StringExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stringExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la==2 or _la==36):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 125
                    self.match(KonturParser.PLUS)
                    self.state = 126
                    _la = self._input.LA(1)
                    if not(_la==2 or _la==36):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(KonturParser.IDENTIFIER)
            else:
                return self.getToken(KonturParser.IDENTIFIER, i)

        def LEFT_PAREN(self):
            return self.getToken(KonturParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(KonturParser.RIGHT_PAREN, 0)

        def SEMICOLON(self):
            return self.getToken(KonturParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(KonturParser.COMMA)
            else:
                return self.getToken(KonturParser.COMMA, i)

        def getRuleIndex(self):
            return KonturParser.RULE_funcExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncExpression" ):
                listener.enterFuncExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncExpression" ):
                listener.exitFuncExpression(self)




    def funcExpression(self):

        localctx = KonturParser.FuncExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(KonturParser.IDENTIFIER)
            self.state = 133
            self.match(KonturParser.LEFT_PAREN)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 134
                self.match(KonturParser.IDENTIFIER)


            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==35:
                    self.state = 137
                    self.match(KonturParser.COMMA)
                    self.state = 138
                    self.match(KonturParser.IDENTIFIER)
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 146
            self.match(KonturParser.RIGHT_PAREN)
            self.state = 147
            self.match(KonturParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operator = None # Token

        def numExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.NumExpressionContext)
            else:
                return self.getTypedRuleContext(KonturParser.NumExpressionContext,i)


        def EQUAL(self):
            return self.getToken(KonturParser.EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(KonturParser.NOT_EQUAL, 0)

        def LESS_THAN(self):
            return self.getToken(KonturParser.LESS_THAN, 0)

        def GREATER_THAN(self):
            return self.getToken(KonturParser.GREATER_THAN, 0)

        def LESS_EQUAL(self):
            return self.getToken(KonturParser.LESS_EQUAL, 0)

        def GREATER_EQUAL(self):
            return self.getToken(KonturParser.GREATER_EQUAL, 0)

        def stringExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.StringExpressionContext)
            else:
                return self.getTypedRuleContext(KonturParser.StringExpressionContext,i)


        def TRUE_VALUE(self):
            return self.getToken(KonturParser.TRUE_VALUE, 0)

        def FALSE_VALUE(self):
            return self.getToken(KonturParser.FALSE_VALUE, 0)

        def boolExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KonturParser.BoolExpressionContext)
            else:
                return self.getTypedRuleContext(KonturParser.BoolExpressionContext,i)


        def AND(self):
            return self.getToken(KonturParser.AND, 0)

        def OR(self):
            return self.getToken(KonturParser.OR, 0)

        def getRuleIndex(self):
            return KonturParser.RULE_boolExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExpression" ):
                listener.enterBoolExpression(self)
